--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,7 @@
 }
 
 .company-name {
-  font-weight: bold;
-  font-size: 20px;
+  font-weight: bolder;
   text-align: center;
 }
 
@@ -34,17 +33,23 @@
 .preview-table th, .preview-table td {
   padding: 8px;
   text-align: left;
-  border: 1px solid #ddd;
+  border: 1px solid black;
 }
 
 .preview-table th {
-  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
 }
 
 .total-amount {
   font-size: 16px;
   font-weight: bold;
   margin-top: 10px;
+  border: 1px solid black;
+  padding:6px;
+  text-align: right;
+  padding-right: 135px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .terms {
